Resolved issues for the width of banners, hero banner's title and Footer stickyness issues

--- a/themes/ad-customs-theme/src/css/_custom.scss
+++ b/themes/ad-customs-theme/src/css/_custom.scss
@@ -135,6 +135,21 @@ div#wrapper.loggedIn {
   margin-top: 120px !important;
 }
 
+.container-fluid-max-xl {
+  max-width: 100%;
+}
+
+.portlet-decorate .portlet-content{
+padding: 0;
+border: none;
+border-radius: 10px;
+background: transparent;
+}
+
+.breadcrumb-item .active{
+color: #fff;
+}
+
 /* SCSS imports */
 @import "custom-datepicker";
 @import "adcMain";
