--- a/themes/ad-customs-theme/src/css/_custom.scss
+++ b/themes/ad-customs-theme/src/css/_custom.scss
@@ -1,3 +1,6 @@
+@import 'liferay-font-awesome/scss/font-awesome';
+@import 'liferay-font-awesome/scss/glyphicons';
+
 :root {
   --primary-color: #3D4742;
   --primary-hover-color: #5b6d67;
