--- a/Fragements/searchable-content/fragments/adc-media-portlet-(copy)/index.css
+++ b/Fragements/searchable-content/fragments/adc-media-portlet-(copy)/index.css
@@ -1,2 +1,13 @@
 .fragment_792002 {
 }
+.input-group-prepend{
+   display: flex;
+}
+
+.input-group-prepend .btn search-input{
+ border-radius: 0px;
+}
+
+.input-group-prepend .input-group-text{
+  border-radius: 0px;
+}
