--- a/modules/adx-dxp-hook-messageboards/src/main/resources/META-INF/resources/message_boards/user_thread_columns.jspf
+++ b/modules/adx-dxp-hook-messageboards/src/main/resources/META-INF/resources/message_boards/user_thread_columns.jspf
@@ -56,6 +56,7 @@
 />
 
 <liferay-ui:search-container-column-user
+		cssClass="user-info-with-details"
 	date="<%= thread.getLastPostDate() %>"
 	name="last-post"
 	property="lastPostByUserId"
