--- a/themes/ad-customs-theme/src/css/_home.scss
+++ b/themes/ad-customs-theme/src/css/_home.scss
@@ -128,8 +128,8 @@
   background-color: #fafafc !important;
   box-shadow: 0px 2px 11px rgba(154, 154, 154, 0.28);
   transition: all 0.2s;
-  width: 100px;
-  height: 90px;
+  width: 100px !important;
+  height: 90px !important;
   border-radius: 10px !important;
   margin-bottom: 1.3rem;
   img {
