--- a/themes/ad-customs-theme/src/css/jquery-ui.css
+++ b/themes/ad-customs-theme/src/css/jquery-ui.css
@@ -5,6 +5,7 @@
 * Copyright jQuery Foundation and other contributors; Licensed MIT */
 
 /* Layout helpers
+New
 ----------------------------------*/
 .ui-helper-hidden {
 	display: none;
@@ -443,25 +444,34 @@ button.ui-button::-moz-focus-inner {
 }
 
 /* RTL support */
-.ui-datepicker-rtl {
-	direction: rtl;
-}
-.ui-datepicker-rtl .ui-datepicker-prev {
-	right: 2px;
-	left: auto;
-}
-.ui-datepicker-rtl .ui-datepicker-next {
-	left: 2px;
-	right: auto;
-}
-.ui-datepicker-rtl .ui-datepicker-prev:hover {
-	right: 1px;
-	left: auto;
-}
-.ui-datepicker-rtl .ui-datepicker-next:hover {
-	left: 1px;
-	right: auto;
-}
+/*.ui-datepicker-rtl {*/
+/*	direction: rtl;*/
+/*}*/
+/*.ui-datepicker-rtl .ui-datepicker-prev {*/
+/*	right: 3px !important;*/
+/*	left: auto;*/
+/*}*/
+/*.ui-datepicker-rtl .ui-datepicker-next {*/
+/*	left: 0 !important;*/
+/*	right: auto;*/
+/*}*/
+
+/*.ui-datepicker-rtl .ui-datepicker-next span{*/
+/*	rotate: 180deg;*/
+/*}*/
+
+/*.ui-datepicker-rtl .ui-datepicker-prev span{*/
+/*	rotate: 180deg;*/
+/*}*/
+
+/*.ui-datepicker-rtl .ui-datepicker-prev:hover {*/
+/*	right: 1px;*/
+/*	left: auto;*/
+/*}*/
+/*.ui-datepicker-rtl .ui-datepicker-next:hover {*/
+/*	left: auto;*/
+/*	right: auto;*/
+/*}*/
 .ui-datepicker-rtl .ui-datepicker-buttonpane {
 	clear: right;
 }
